--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,9 @@
+* {
+    font-family: 'Play', serif;
+}
+
 .content {
-    min-height: 90vh;
+    min-height: 80vh;
 }
 
 .header {
@@ -37,8 +41,22 @@ nav {
     background-image: url('./assets/images/DOSSAS Banner 2 12-5-22.png');
     background-size: cover;
     background-position: center;
-    /* background-repeat: no-repeat; */
+}
 
+#homeContent {
+    display: flex;
+}
+
+#homeParagraphs {
+    margin: 20px;
+    padding: 10px;
+    border: 3px solid aqua;
+    border-radius: 10px;
+}
+
+#cover_photo {
+    max-width: 50%;
+    max-height: auto;
 }
 
 .footer {
