--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Play', serif;
+    font-size: 20px;
 }
 
 .content {
@@ -57,6 +58,21 @@ nav {
 #cover_photo {
     max-width: 50%;
     max-height: auto;
+}
+
+#aboutPage {
+    text-align: center;
+    border: 3px solid aqua;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+#aboutHeader {
+    font-size: 50px;
+}
+
+.aboutParagraph {
+    padding: 15px;
 }
 
 .footer {
